Introduce YPath helper class